Done ID Validations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.mvc.view.prefix=/WEB-INF/Webpages/
 spring.mvc.view.suffix=.jsp
 spring.thymeleaf.view-names=thymeleaf/*
 default.password=Lecturer1234
+default.password1=User1234
