--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,4 @@ spring.mvc.view.suffix=.jsp
 spring.thymeleaf.view-names=thymeleaf/*
 default.password=Lecturer1234
 default.password1=User1234
+jwt.secret=backend
